# Python

./: Main.py  Quant.py  Quantiacs.py  cache.sqlite  getFinnHub.py  getW16.py  getYahoo.py  pyproject.toml  quantV1.py  readMail.py
