[tool.poetry]
name = "Python"
version = "0.1.0"
description = ""
authors = ["Matheus"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.2"
yfinance = "^0.1.54"
statsmodels = "^0.11.1"
datetime = "^4.3"
pythonc = "^0.1.0"
seaborn = "^0.10.0"
pandas_datareader = "^0.8.1"
requests_cache = "^0.5.2"
ta = "^0.5.13"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
